<resources>
    <string name="app_name">FunBoxTest</string>
    <string name="store_front">Store-Front</string>
    <string name="back_end">Back-End</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price">Цена</string>
    <string name="count">Количество</string>
    <string name="buy">Купить</string>
    <string name="currency"> руб.</string>
    <string name="pieces">шт.</string>
    <string name="add_item">add item</string>
    <string name="save">Сохранить</string>
    <string name="name">Название</string>
</resources>
